mat for overlay added and change mat succeeded

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,3 +93,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="MyLabProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="MyLabGameMode")
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/MyLab.MyLabCharacter.SearchAndVisualize",NewName="/Script/MyLab.MyLabCharacter.ChangeMaterial")
++PropertyRedirects=(OldName="/Script/MyLab.MyLabCharacter.SearchAction_01",NewName="/Script/MyLab.MyLabCharacter.SearchAction")
