--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_01_SearchLogic/Maps/_01_SearchDifferentTypes._01_SearchDifferentTypes
+EditorStartupMap=/Game/_01_SearchLogic/Maps/_02_ParseHierarchy_Per._02_ParseHierarchy_Per
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/_01_SearchLogic/Maps/_01_SearchDifferentTypes._01_SearchDifferentTypes
+GameDefaultMap=/Game/_01_SearchLogic/Maps/_02_ParseHierarchy_Per._02_ParseHierarchy_Per
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -98,3 +98,4 @@ AppliedDefaultGraphicsPerformance=Maximum
 +FunctionRedirects=(OldName="/Script/MyLab.MyLabCharacter.SearchAndVisualize",NewName="/Script/MyLab.MyLabCharacter.ChangeMaterial")
 +PropertyRedirects=(OldName="/Script/MyLab.MyLabCharacter.SearchAction_01",NewName="/Script/MyLab.MyLabCharacter.SearchAction")
 +PropertyRedirects=(OldName="/Script/MyLab.MaterialStruct.Material",NewName="/Script/MyLab.MaterialStruct.Materials")
+
