Recursive parsing logic implemented

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,4 +99,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +PropertyRedirects=(OldName="/Script/MyLab.MyLabCharacter.SearchAction_01",NewName="/Script/MyLab.MyLabCharacter.SearchAction")
 +PropertyRedirects=(OldName="/Script/MyLab.MaterialStruct.Material",NewName="/Script/MyLab.MaterialStruct.Materials")
 +FunctionRedirects=(OldName="/Script/MyLab.ML_JsonParser.SendHTTPGet",NewName="/Script/MyLab.ML_JsonParser.HttpCall")
++FunctionRedirects=(OldName="/Script/MyLab.IML_ParserToCharacter.ParseToSend",NewName="/Script/MyLab.IML_ParserToCharacter.ParserToObject")
 
