--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,4 +100,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +PropertyRedirects=(OldName="/Script/MyLab.MaterialStruct.Material",NewName="/Script/MyLab.MaterialStruct.Materials")
 +FunctionRedirects=(OldName="/Script/MyLab.ML_JsonParser.SendHTTPGet",NewName="/Script/MyLab.ML_JsonParser.HttpCall")
 +FunctionRedirects=(OldName="/Script/MyLab.IML_ParserToCharacter.ParseToSend",NewName="/Script/MyLab.IML_ParserToCharacter.ParserToObject")
++PropertyRedirects=(OldName="/Script/MyLab.StaticData.Datas",NewName="/Script/MyLab.StaticData.Data")
 
